Actualización SOLID