@@ -29,17 +29,11 @@ public class Tiempo {
         return String.format("%02d:%02d", hora, minuto);
     }
 
-    public int getHora() {
-        return hora;
-    }
+    public int getHora() { return hora; }
 
-    public int getMinuto() {
-        return minuto;
-    }
+    public int getMinuto() { return minuto; }
 
-    public LocalDate getFecha() {
-        return fecha;
-    }
+    public LocalDate getFecha() { return fecha; }
 
     public boolean esFinDeSemana() {
         DayOfWeek dia = fecha.getDayOfWeek();
@@ -47,11 +41,10 @@ public class Tiempo {
     }
 
     public boolean esFestivo() {
-        List<LocalDate> diasFestivos = Arrays.asList(
-                LocalDate.of(fecha.getYear(), 1, 1),  // Año Nuevo
-                LocalDate.of(fecha.getYear(), 12, 25), // Navidad
-                LocalDate.of(fecha.getYear(), 11, 1)  // Todos los Santos
-        );
-        return diasFestivos.contains(fecha);
+        return List.of(
+                LocalDate.of(fecha.getYear(), 1, 1),
+                LocalDate.of(fecha.getYear(), 12, 25),
+                LocalDate.of(fecha.getYear(), 11, 1)
+        ).contains(fecha);
     }
 }
